# solana-multidex-arbitrage-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  run_with_sidecar.sh
.github/workflows/: ci.yml
jito_protos/: Cargo.toml  build.rs
jito_protos/src/: lib.rs
sidecar/: .env.example  batch_check_liquidity.ts  check_liquidity.ts  package-lock.json  package.json
sidecar/src/: index.ts  meteora_dlmm.ts  orca_whirlpool.ts  raydium_amm.ts  raydium_clmm.ts  slippage.ts
src/: alt_manager.rs  constants.rs  grpc_subscription.rs  jito_grpc.rs  lib.rs  log_utils.rs  main.rs  monitor.rs  rpc.rs  subscription.rs
src/cache/: mod.rs
src/calibration/: mod.rs
src/config/: dlmm.rs  mod.rs
src/dex/: clmm.rs  meteora_damm.rs  meteora_dlmm.rs  meteora_lb.rs  mod.rs  opportunity_detector.rs  orca.rs  pump_fun.rs  raydium.rs  raydium_amm.rs  raydium_cpmm.rs
src/pool_manager/: README.md  config.rs  manager.rs  mod.rs  types.rs
src/sidecar_client/: client.rs  mod.rs  types.rs
src/trade/: accounts.rs  arbitrage.rs  dispatcher.rs  execution.rs  meteora.rs  meteora_damm.rs  meteora_dlmm.rs  mod.rs  orca.rs  pump_fun.rs  raydium.rs  raydium_amm.rs  raydium_cpmm.rs  strategy.rs  tx.rs
