[package]
name = "arb"
version = "0.1.0"
edition = "2021"
default-run = "arb"

[lib]
name = "arb"
path = "src/lib.rs"

[[bin]]
name = "arb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
dotenvy = "0.15"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "3.1.5"
solana-account = "3.1.0"
solana-account-decoder = "3.1.5"
solana-commitment-config = "3.1.0"
solana-hash = "3.1.0"
solana-instruction = "3.0.0"
solana-instruction-error = "2.1.0"
solana-keypair = "3.1.0"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-sysvar = "3.1.1"
solana-transaction = "3.0.2"
solana-transaction-error = "3.0.0"
solana-transaction-status = "3.1.5"
solana-address-lookup-table-interface = { version = "3.0.0", features = ["bincode"] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
base64 = "0.22"
bs58 = "0.5"
flexi_logger = "0.29"
once_cell = "1.19"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
clap = { version = "4.5", features = ["derive"] }
bincode = "1.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
jito-sdk-rust = "0.3.2"
jito-protos = { path = "jito_protos" }

# gRPC subscription support (Yellowstone Geyser)
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v10.1.1+solana.3.1.1-rc" }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v10.1.1+solana.3.1.1-rc" }
tonic = { version = "0.14.2", features = ["tls-native-roots"] }

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

